# Ts3PluginTemplate

./: CMakeLists.txt
include/: plugin_definitions.h  ts3_functions.h
